fix: image scaling issue on small device

--- a/src/components/404/notfound.css
+++ b/src/components/404/notfound.css
@@ -3,7 +3,7 @@
   width: 40rem;
 }
 
-@media only screen and (min-width: 330px) and (max-width: 560px) {
+@media only screen and (min-width: 300px) and (max-width: 560px) {
   .page-404 {
     height: 25rem;
     width: 24rem;
