--- a/src/components/Home-container/home-container.css
+++ b/src/components/Home-container/home-container.css
@@ -88,3 +88,10 @@ video {
   background: var(--col-white);
   color: var(--col-black);
 }
+
+@media only screen and (min-width: 330px) and (max-width: 560px) {
+  .header {
+    position: relative;
+    height: 102vh;
+  }
+}
